--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,22 @@
 	<groupId>net.niconomicon.pdf-jrasterizer</groupId>
 	<artifactId>pdf-jrasterizer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<url>http://www.niconomicon.net/tests/maven/net/niconomicon/pdf-jrasterizer/</url>
 	<dependencies>
 		<dependency>
 			<groupId>net.java.dev</groupId>
 			<artifactId>pdf-renderer</artifactId>
 			<version>1.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.0</version>
 		</dependency>
 	</dependencies>
 	<distributionManagement>
@@ -17,9 +28,7 @@
 			<url>scp://ssh.phx.nearlyfreespeech.net/home/public/tests/maven</url>
 		</repository>
 	</distributionManagement>
-
 	<build>
-
 		<extensions>
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
@@ -42,46 +51,106 @@
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.2</version>
 			</plugin>
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-assembly-plugin</artifactId> 
+				<configuration> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> 
+				</descriptorRefs> <archive> <manifest> <mainClass>net.niconomicon.jrasterizer.PDFRasterizerGUI</mainClass> 
+				</manifest> </archive> </configuration> <executions> <execution> <phase>package</phase> 
+				<goals> <goal>single</goal> </goals> </execution> </executions> </plugin> -->
+			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>appassembler-maven-plugin</artifactId> 
+				<configuration> <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath> 
+				<binPrefix>niconomicon</binPrefix> <assembleDirectory>${project.build.directory}/scripts</assembleDirectory> 
+				<extraJvmArguments>-Xms1024M -Xmx1024M</extraJvmArguments> <platforms> <platform>windows</platform> 
+				<platform>unix</platform> </platforms> <programs> <program> <mainClass>net.niconomicon.jrasterizer.PDFRasterizerGUI</mainClass> 
+				<name>rasterizerGUI</name> </program> </programs> </configuration> </plugin> -->
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-jarsigner-plugin</artifactId> 
+				<!- <version></version> -> <configuration> <keystore>/Users/niko/keystore_jnlp/testKyStore</keystore> 
+				<alias>niko</alias> <storepass>ch4r4ct3rs</storepass> <keypass>ch4r4ct3rs</keypass> 
+				</configuration> <executions> <execution> <id>sign-jars</id> <phase>package</phase> 
+				<goals> <goal>sign</goal> </goals> </execution> <execution> <id>verify-jars</id> 
+				<phase>verify</phase> <goals> <goal>verify</goal> </goals> </execution> </executions> 
+				</plugin> -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-					<archive>
-						<manifest>
-							<mainClass>net.niconomicon.jrasterizer.PDFRasterizerGUI</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
+				<groupId>org.codehaus.mojo.webstart</groupId>
+				<artifactId>webstart-maven-plugin</artifactId>
 				<executions>
 					<execution>
-						<phase>package</phase>
 						<goals>
-							<goal>single</goal>
+							<goal>jnlp</goal> <!-- use jnlp, jnlp-inline or jnlp-single as appropriate -->
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>appassembler-maven-plugin</artifactId>
 				<configuration>
-					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
-					<binPrefix>niconomicon</binPrefix>
-					<assembleDirectory>${project.build.directory}/scripts</assembleDirectory>
-					<extraJvmArguments>-Xms1024M -Xmx1024M</extraJvmArguments>
-					<platforms>
-						<platform>windows</platform>
-						<platform>unix</platform>
-					</platforms>
-					<programs>
-						<program>
-							<mainClass>net.niconomicon.jrasterizer.PDFRasterizerGUI</mainClass>
-							<name>rasterizerGUI</name>
-						</program>
-					</programs>
+					<!--outputDirectory></outputDirectory --> <!-- not required?? -->
+					<!-- Set to true to exclude all transitive dependencies. Default is 
+						false. -->
+					<excludeTransitive>false</excludeTransitive>
+					<!-- The path where the libraries are stored within the jnlp structure. 
+						not required. by default the libraries are within the working directory -->
+					<libPath>lib</libPath>
+					<!-- [optional] transitive dependencies filter - if omitted, all transitive 
+						dependencies are included -->
+					<dependencies>
+						<!-- Note that only groupId and artifactId must be specified here. 
+							because of a limitation of the Include/ExcludesArtifactFilter -->
+						<includes>
+							<!-- include>commons-logging:commons-logging</include>
+							<include>commons-cli:commons-cli</include-->
+							<inclue>net.java.dev:pdf-renderer</inclue>
+						</includes>
+						<!-- excludes> <exclude></exclude> <excludes -->
+					</dependencies>
+
+					<!--resourcesDirectory>${project.basedir}/src/main/jnlp/resources</resourcesDirectory --> <!-- default value -->
+
+					<!-- JNLP generation -->
+					<jnlp>
+						<!-- default values -->
+						<!--inputTemplateResourcePath>${project.basedir}</inputTemplateResourcePath -->
+						<!--inputTemplate>src/main/jnlp/template.vm</inputTemplate --> <!-- relative to inputTemplateResourcePath -->
+						<outputFile>pdf-jrasterizer.jnlp</outputFile> <!-- defaults to launch.jnlp -->
+						<!-- used to automatically identify the jar containing the main class. -->
+						<!-- this is perhaps going to change -->
+						<mainClass>net.niconomicon.jrasterizer.PDFRasterizerGUI</mainClass>
+						<!-- <mainClass>org.apache.commons.cli.BasicParser</mainClass> -->
+					</jnlp>
+
+
+					<!-- SIGNING -->
+					<!-- defining this will automatically sign the jar and its dependencies, 
+						if necessary -->
+					<sign>
+						<keystore>/Users/niko/keystore_jnlp/ks</keystore>
+						<alias>edgar</alias>
+						<storepass>password</storepass> <!-- ${storepass} -->
+						<keypass>password</keypass>
+						<!-- we need to override passwords easily from the command line. ${keypass} -->
+						<!--storetype>fillme</storetype -->
+						<!--validity>fillme</validity -->
+						<!-- only required for generating the keystore -->
+						<!---->
+						<dnameCn>niconomicon</dnameCn>
+						<dnameOu>net</dnameOu>
+						<dnameO>fillme</dnameO>
+						<dnameL>fillme</dnameL>
+						<dnameSt>fillme</dnameSt>
+						<dnameC>fillme</dnameC>
+						<!-- -->
+						<verify>true</verify> <!-- verify that the signing operation succeeded -->
+						<!-- KEYSTORE MANAGEMENT -->
+						<!-- -->
+						<keystoreConfig>
+							<delete>true</delete> <!-- delete the keystore -->
+							<gen>true</gen> <!-- optional shortcut to generate the store. -->
+						</keystoreConfig>
+					</sign>
+					<!-- BUILDING PROCESS -->
+					<pack200>true</pack200>
+					<gzip>true</gzip> <!-- default force when pack200 false, true when pack200 selected ?? -->
+					<!-- causes a version attribute to be output in each jar resource element, 
+						optional, default is false -->
+					<outputJarVersions>true</outputJarVersions>
+					<!--install>false</install --> <!-- not yet supported -->
+					<verbose>true</verbose>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -108,5 +177,7 @@
 			<name>twdata.org Maven 2 Repository</name>
 			<url>http://twdata-m2-repository.googlecode.com/svn/</url>
 		</pluginRepository>
+		<!-- <pluginRepository> <id>onejar-maven-plugin.googlecode.com</id> <url>http://onejar-maven-plugin.googlecode.com/svn/mavenrepo</url> 
+			</pluginRepository> -->
 	</pluginRepositories>
 </project>
