--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>net.niconomicon.pdf-jrasterizer</groupId>
+	<groupId>net.niconomicon</groupId>
 	<artifactId>pdf-jrasterizer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<url>http://www.niconomicon.net/tests/maven/net/niconomicon/pdf-jrasterizer/</url>
@@ -10,16 +10,6 @@
 			<groupId>net.java.dev</groupId>
 			<artifactId>pdf-renderer</artifactId>
 			<version>1.6.2</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.0.4</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-cli</groupId>
-			<artifactId>commons-cli</artifactId>
-			<version>1.0</version>
 		</dependency>
 	</dependencies>
 	<distributionManagement>
@@ -80,48 +70,17 @@
 					</execution>
 				</executions>
 				<configuration>
-					<!--outputDirectory></outputDirectory --> <!-- not required?? -->
-					<!-- Set to true to exclude all transitive dependencies. Default is 
-						false. -->
 					<excludeTransitive>false</excludeTransitive>
-					<!-- The path where the libraries are stored within the jnlp structure. 
-						not required. by default the libraries are within the working directory -->
 					<libPath>lib</libPath>
-					<!-- [optional] transitive dependencies filter - if omitted, all transitive 
-						dependencies are included -->
-					<dependencies>
-						<!-- Note that only groupId and artifactId must be specified here. 
-							because of a limitation of the Include/ExcludesArtifactFilter -->
-						<includes>
-							<!-- include>commons-logging:commons-logging</include>
-							<include>commons-cli:commons-cli</include-->
-							<inclue>net.java.dev:pdf-renderer</inclue>
-						</includes>
-						<!-- excludes> <exclude></exclude> <excludes -->
-					</dependencies>
-
-					<!--resourcesDirectory>${project.basedir}/src/main/jnlp/resources</resourcesDirectory --> <!-- default value -->
-
 					<!-- JNLP generation -->
 					<jnlp>
-						<!-- default values -->
-						<!--inputTemplateResourcePath>${project.basedir}</inputTemplateResourcePath -->
-						<!--inputTemplate>src/main/jnlp/template.vm</inputTemplate --> <!-- relative to inputTemplateResourcePath -->
 						<outputFile>pdf-jrasterizer.jnlp</outputFile> <!-- defaults to launch.jnlp -->
-						<!-- used to automatically identify the jar containing the main class. -->
-						<!-- this is perhaps going to change -->
 						<mainClass>net.niconomicon.jrasterizer.PDFRasterizerGUI</mainClass>
-						<!-- <mainClass>org.apache.commons.cli.BasicParser</mainClass> -->
 					</jnlp>
-
-
-					<!-- SIGNING -->
-					<!-- defining this will automatically sign the jar and its dependencies, 
-						if necessary -->
 					<sign>
 						<keystore>/Users/niko/keystore_jnlp/ks</keystore>
 						<alias>edgar</alias>
-						<storepass>password</storepass> <!-- ${storepass} -->
+						<storepass>password</storepass>
 						<keypass>password</keypass>
 						<!-- we need to override passwords easily from the command line. ${keypass} -->
 						<!--storetype>fillme</storetype -->
