--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		</repository>
 	</distributionManagement>
 	<build>
-		<sourceDirectory>src</sourceDirectory>
+		<sourceDirectory>src/java</sourceDirectory>
 		<extensions>
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
