--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry kind="src" path="src/java" including="**/*.java"/>
-  <classpathentry kind="output" path="target/classes"/>
-  <classpathentry kind="var" path="M2_REPO/net/java/dev/pdf-renderer/1.6.2/pdf-renderer-1.6.2.jar" sourcepath="M2_REPO/net/java/dev/pdf-renderer/1.6.2/pdf-renderer-1.6.2-sources.jar"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
+	<classpathentry including="**/*.java" kind="src" path="src/java"/>
+	<classpathentry kind="var" path="M2_REPO/net/java/dev/pdf-renderer/1.6.2/pdf-renderer-1.6.2.jar" sourcepath="M2_REPO/net/java/dev/pdf-renderer/1.6.2/pdf-renderer-1.6.2-sources.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
