--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.niconomicon</groupId>
+	<name>PDF-JRasterizer</name>
 	<artifactId>pdf-jrasterizer</artifactId>
-	<version>0.0.4</version>
+	<version>0.0.5</version>
 	<url>http://www.niconomicon.net/tests/maven/net/niconomicon/pdf-jrasterizer/</url>
 	<dependencies>
 		<dependency>
